GPF-1576 Gene browser text overlap fix

--- a/gpfjs/src/app/gene-plot/gene-plot.component.css
+++ b/gpfjs/src/app/gene-plot/gene-plot.component.css
@@ -9,7 +9,7 @@
 
 .header-item {
   margin: 0;
-  position: absolute;
+  position: relative;
   top: 50%;
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
